# Lab-Rador

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SCAFFOLD_REVIEW.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  __init__.py
.github/workflows/: test.yml
agents/: __init__.py  base_agent.py  protocol_analyzer.py  protocol_generator.py  protocol_refiner.py
agents/prompts/: protocol_generation.md  protocol_refinement.md  safety_analysis.md
api/: anthropic_client.py  base_client.py  gemini_client.py  protocols_io_client.py
cli/: main_cli.py
cli/commands/: analyze.py  export.py  generate.py  list_protocols.py  refine.py
config/: __init__.py  api_config.py  constants.py  settings.py
core/: enums.py  exceptions.py  models.py
data/: __init__.py  equipment_catalog.json  materials_catalog.json
data/examples/: __init__.py  gel_electrophoresis.json  protein_purification.json
data/protocols/: demo_protocol_20260425_194148.json  demo_protocol_20260425_194148.md  demo_protocol_20260425_194858.json  demo_protocol_20260425_194858.md  (+12 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  PROTOCOL_SCHEMA.md
generators/: __init__.py  base_generator.py  json_generator.py  markdown_generator.py  opentrons_generator.py
scripts/: build.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py  fixtures.py  test_cli.py  test_generators.py  test_models.py  test_protocol_generator.py  test_validators.py
utils/: file_io.py  formatters.py  logger.py  validators.py
(+3 files in other folders)
